mdd-backend/src/main/java/com/example/mdd_backend/errors/exceptions/ValidationException.java
package com.example.mdd_backend.errors.exceptions;

public class ValidationException extends RuntimeException {
    public ValidationException(String message) {
        super(message);
    }
}
